--- a/jobapp/templates/Jobseeker/home.html
+++ b/jobapp/templates/Jobseeker/home.html
@@ -1,4 +1,4 @@
-{% extends 'navbar.html' %}
+{% extends 'Jobseeker/navbar.html' %}
 {% load static %}
 
 {% block title %}
@@ -8,4 +8,6 @@ Home
 
 
 {% block body %}
+
+
 {% endblock %}
