--- a/jobapp/templates/Jobseeker/navbar.html
+++ b/jobapp/templates/Jobseeker/navbar.html
@@ -42,7 +42,7 @@
 
     <nav class="navbar navbar-expand-lg"  style="background-color: rgb(255, 255, 255);border-bottom: rgb(0, 0, 0) solid 1px;">
         <div class="container">
-          <a class="navbar-brand animate__shakeY" style="color: rgb(0, 140, 114);font-family: 'Rowdies', cursive; font-size: xx-large;">FindJob</a>
+          <a class="navbar-brand animate__shakeY" style="color: rgb(0, 140, 114);font-family: 'Rowdies', cursive; font-size: xx-large;">JobFinder <i class="fa fa-search-dollar"></i></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -58,7 +58,7 @@
                 <a class="nav-link" style="color: rgb(0, 0, 0);" href="">Contact Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" style="color: rgb(0, 0, 0);" href="/">Logout</a>
+                <a class="nav-link" style="color: rgb(0, 0, 0);" href="{% url 'logout' %}">Logout</a>
               </li>
             </ul>
 
